--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -87,20 +87,20 @@
           <span class="menu-title">Users</span>
         </a>
       </li>
-      <!-- <li class="nav-item menu-items">
-        <a class="nav-link" href="pages/icons/mdi.html">
-          <span class="menu-icon">
-            <i class="mdi mdi-contacts"></i>
-          </span>
-          <span class="menu-title">Icons</span>
-        </a>
-      </li> -->
       <li class="nav-item menu-items">
         <a class="nav-link" href="/admin/orders" >
           <span class="menu-icon">
             <i class="mdi mdi-cube-outline"></i>
           </span>
           <span class="menu-title">Orders</span>
+        </a>
+      </li>
+      <li class="nav-item menu-items">
+        <a class="nav-link" href="/admin/coupon">
+          <span class="menu-icon">
+            <i class="mdi mdi-contacts"></i>
+          </span>
+          <span class="menu-title">Coupons</span>
         </a>
       </li>
       <!-- <li class="nav-item menu-items">
