--- a/views/user/account/wallet.ejs
+++ b/views/user/account/wallet.ejs
@@ -7,7 +7,7 @@
         <a class="btn btn-outline-primary btn-round w-100" href="/wallet?uid=<%= cookies.id %>" >My wallet and transactions</a>
     </div>
     <div class="col-12 col-lg-4">
-        <a class="btn btn-outline-primary btn-round w-100">Explore Coupan and Vouchers </a>
+        <a href="/coupons" class="btn btn-outline-primary btn-round w-100">Explore Coupon and Vouchers </a>
     </div>
 </div>
 <% }else{ %>
