--- a/public/assets/css/gasal.css
+++ b/public/assets/css/gasal.css
@@ -156,3 +156,17 @@
     border-left: 1px solid rgba(45, 45, 45, 0.756);
     pointer-events: none;
 }
+
+.coupon-card{
+    background: rgba(218, 218, 218, 0.402);
+    backdrop-filter: blur(20px);
+    border-radius: 7px;
+    border: 1px solid grey;
+  }
+  
+  .coupon-card h4 span{
+    border: 2px solid rgb(255, 111, 0);
+    border-style: dotted;
+    padding: 0 5px;
+    border-radius: 5px;
+  }
