--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -34,7 +34,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" id="tab-downloads-link" data-toggle="tab"
                                             href="#tab-downloads" role="tab" aria-controls="tab-downloads"
-                                            aria-selected="false">Wallet</a>
+                                            aria-selected="false">Wallet & Coupan</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address"
