--- a/views/user/vieworder.ejs
+++ b/views/user/vieworder.ejs
@@ -1,11 +1,25 @@
 <%- include('head.ejs') %>
 
-<div class="container">
+<div class="page-wrapper">
+    <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
+        <div class="container">
+            <h1 class="page-title">About Order<span>TouchBrand</span></h1>
+        </div><!-- End .container -->
+    </div><!-- End .page-header -->
+    <nav aria-label="breadcrumb" class="breadcrumb-nav mb-3">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/account">Account</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Order Details</li>
+            </ol>
+        </div><!-- End .container -->
+    </nav><!-- End .breadcrumb-nav -->
     <% if(order){ %>
+        <div class="container">
     <!-- Product listing -->
     <div class="row ">
-        <div class="col-12 mt-4" style="display: flex; justify-content: space-between;">
-            <h5><a href="/account"><i class="fa-solid fa-angle-left"></i> Your Orders</a></h5>
+        <div class="col-12" style="display: flex; justify-content: space-between;">
             <h5 style="color: slategray;">On: <%= order.Orderdate.toDateString() %></h5>
         </div>
         <div class="allProducts row col-12 mt-1">
@@ -18,6 +32,7 @@
                     <span>Price: $<%= item.Price %></span><br>
                     <span>Shipping cost: $<%= item.Shippingcost %></span><br>
                     <span>Total: $<%= (item.Price + item.Shippingcost) * item.Quantity  %></span>
+                    <span class="text-success h6"><%= item.Paymet == 'cod'?'COD':'Payed' %></span>
                 </div>
             </div>
             <% }) %>
@@ -50,6 +65,8 @@
         </div>
     </div>
     <% } %>
+</div>
+<%- include('footer.ejs')%>
 </div>
 
 <%- include('foot.ejs') %>
