--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -41,14 +41,14 @@
                                                             <div class="product">
                                                                 <figure class="product-media">
                                                                     <a href="#">
-                                                                        <img src="<%= product.Productimg %>"
+                                                                        <img src="<%= product.Productid.Imagepath[0] %>"
                                                                             alt="Product image">
                                                                     </a>
                                                                 </figure>
 
                                                                 <h3 class="product-title">
                                                                     <a href="#">
-                                                                        <%= product.Productname %>
+                                                                        <%= product.Productid.Productname %>
                                                                     </a>
                                                                 </h3><!-- End .product-title -->
                                                             </div><!-- End .product -->
@@ -65,7 +65,7 @@
                                                         <td class="total-col">$<%= product.Price * product.Quantity %>
                                                         </td>
                                                         <td class="remove-col"><a
-                                                                onclick="removeFromCart('<%= product.Productid %>')"><button
+                                                                onclick="removeFromCart('<%= product.Productid._id %>')"><button
                                                                     class="btn-remove"><i
                                                                         class="icon-close"></i></button></a></td>
                                                     </tr>
