--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -32,7 +32,7 @@
                             <div class="row">
                                 <div class="col-lg-9">
                                     <h2 class="checkout-title">Billing Details</h2><!-- End .checkout-title -->
-
+                                    <% if(address){ %>
                                     <div class="row">
                                         <div class="col-12 col-lg-6">
                                             <div class="checkoutAddress" id="first-address-element" onclick="handleCheckoutAddressClick1({
@@ -90,6 +90,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <% } %>
 
                                     <div class="row">
                                         <div class="col-12">
@@ -277,6 +278,7 @@
                                             </div><!-- End .card -->
 
                                             <div class="card p-2">
+                                                <% if(wallet){ %>
                                                 <div class="card-header" id="heading-5">
                                                     <h2 class="card-title">
                                                         <input type="radio" name="payby" role="button"
@@ -294,6 +296,7 @@
                                                     </div><!-- End .card-body -->
                                                 </div><!-- End .collapse -->
                                             </div><!-- End .card -->
+                                            <% } %>
                                         </div><!-- End .accordion -->
 
                                         <button type="submit" class="btn btn-outline-primary-2 btn-order btn-block">
